[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/inimigo/ghost-red-25x35.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Inimigo2.gd" type="Script" id=2]
[ext_resource path="res://Cenas/Panel2.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 25, 35 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 25, 0, 25, 35 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 25, 35 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 75, 0, 25, 35 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 25, 35 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 35, 25, 35 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 25, 35, 25, 35 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 35, 25, 35 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 75, 35, 25, 35 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 35, 25, 35 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
} ]

[node name="Inimigo2" type="KinematicBody2D"]
scale = Vector2( -10, 10 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "Idle"
frame = 5
playing = true

[node name="Panel" type="Panel" parent="."]
margin_left = 8.0
margin_top = -112.0
margin_right = 133.0
margin_bottom = -17.0
rect_scale = Vector2( -1, 1 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel"]
margin_right = 112.0
margin_bottom = 24.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 8.0
margin_top = 24.0
margin_right = 96.0
margin_bottom = 68.0

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_right = 88.0
margin_bottom = 20.0

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 88.0
margin_bottom = 44.0

[node name="Button3" type="Button" parent="Panel/VBoxContainer"]
margin_top = 48.0
margin_right = 88.0
margin_bottom = 68.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="Panel" method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="Panel" method="_on_Button2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button3" to="Panel" method="_on_Button3_pressed"]
